# json-accessors

./: LICENSE  README.md  flake.nix  hie.yaml  json-accessors.cabal
src/Data/JSON/: Accessors.hs
src/Data/JSON/Internal/: Generator.hs
