cabal-version:   2.4
name:            json-accessors
version:         0.1.0.0
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
synopsis:        Generate type-safe JSON field accessors at compile time using Template Haskell.
description:     Generate type-safe JSON field accessors at compile time using Template Haskell.
author:          José María Landa Chávez
maintainer:      José María Landa Chávez <josemaria.landa@gmail.com>
copyright:       2025 José María Landa Chávez
license:         MIT
license-file:    LICENSE
build-type:      Simple
extra-doc-files: README.md

common common-options
  build-depends:
      base >=4.9 && <5
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
      Data.JSON.Accessors
  other-modules:
      Data.JSON.Internal.Generator
  build-depends:  
      template-haskell,
      aeson,
      bytestring,
      unordered-containers,
      vector,
      text,
      scientific,
      pretty
